# 2401-final

./: .gitignore  CMakeLists.txt  Makefile  README.txt  defs.h  evidence.c  ghost.c  house.c  hunter.c  init.c  logger.c  main.c  room.c  utils.c  whatweshoulddo.c
